2006-07-31  Alex Roitman  <shura@gramps-project.org>
	* src/UndoHistory.py (UndoHistory._build_model): Only show the
	initial entry is database is really opened.

2006-07-31  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/NameDisplay.py: Rewrite in more object oriented way; Interface
	change.
	* src/ViewManager.py (post_load_newdb): Change of NameDisplay interface.
	* src/GrampsDb/_ReadXML.py (parse): Change of NameDisplay interface.
	* src/GrampsDb/_ReadGrdb.py (importData): Change of NameDisplay
	interface.
	* src/GrampsCfg.py: Change of NameDisplay interface; Name format Edit
	and Add callbacks divided.
	* src/RelLib/_Name.py: Default/standard name format definitions moved to
	NameDisplay.
	* src/Editors/_EditName.py (_setup_fields): Change of NameDisplay
	interface.
	* src/plugins/Check.py (cleanup_deleted_name_formats): Change of
	NameDisplay interface.

2006-07-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: handle missing event type
	* src/DataViews/_PlaceView.py: add tooltip for map button

2006-07-30  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Merge.py: Rename, because Merge module shadows this
	plugin module.
	* src/plugins/FindDupes.py: New module, to replace Merge.py;
	(ShowMatches.on_do_merge_clicked): Use new Merge component.
	* src/ViewManager.py (ViewManager.do_load_plugins): Catch exception;
	(ViewManager.plugin_status): Catch exception.

2006-07-29  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/changetype.glade: Update text warning.
	* src/Editors/_EditMedia.py (EditMedia.save): Use absolute path
	to determine mime type.
	* src/PageView.py (PersonNavView.filter_editor): Catch exception.
	* src/DataViews/_FamilyList.py (FamilyListView.filter_editor):
	Catch exception.
	* src/plugins/EventCmp.py (EventComparison.filter_editor_clicked):
	Catch exception.
	* src/ManagedWindow.py (ManagedWindow.show): Set opened flag;
	(ManagedWindow.close): Unset opened flag.